# student-marksheet-manager

./: Dockerfile  backup_before_migration.sql  docker-compose.yml  fix.sql
backend/: .gitignore  dockerfile  main.py  pyproject.toml
backend/app/controllers/: admin_controller.py  assignment_controller.py  professor_controller.py  student_controller.py
backend/app/cors/: database.py
backend/app/models/: admin_model.py  assignment_model.py  mark_model.py  professor_model.py  student_model.py
backend/app/routes/: admin_router.py  assignment_router.py  auth_router.py  professor_router.py  student_router.py
backend/app/schemas/: admin_schemas.py  assignment_schemas.py  auth_schemas.py  mark_schemas.py  marksheet_schemas.py  professor_schemas.py  student_schemas.py
backend/uploads/submissions/4/: 10_0a82ca307109462fb0f690e2bce2bf7f.py  11_32862a7d297b48188157f14d6766494d.java
frontend/: dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Header.jsx
frontend/src/pages/: AdminDashboard.jsx  Login.jsx  ProfessorDashboard.jsx  StudentDashboard.jsx
