[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.1",
    "google-genai>=1.73.1",
    "google-generativeai>=0.8.6",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary>=2.9.12",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
